/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
  // Apply the application plugin to add support for building a CLI application in Java.
  id 'application'
}

repositories {
  // Use Maven Central for resolving dependencies.
  mavenCentral()
}

configurations.all {
  exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
  exclude group: 'ch.qos.logback', module: 'logback-classic'
  exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
}

dependencies {
  // Use JUnit Jupiter for testing.
  testImplementation libs.junit.jupiter

  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // This dependency is used by the application.
  implementation libs.guava

  // Lombok
  compileOnly libs.lombok
  annotationProcessor libs.lombok
  testCompileOnly libs.lombok
  testAnnotationProcessor libs.lombok

  // Logger
  implementation libs.slf4j
  implementation libs.spring.boot.starter.log4j2
  implementation libs.log4j.layout.template.json
//  implementation libs.log4j.core
//  testImplementation libs.log4j.core

  // Jackson
  implementation libs.jackson.databind
  implementation libs.jackson.dataformat

  // Snakeyaml
  implementation libs.snakeyaml

  // Mockito:
  testImplementation libs.mockito.core
  testImplementation libs.mockito.junit.jupiter
  testImplementation libs.bytebuddy

  // Spring
  implementation(libs.spring.boot.starter) {
    exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
  }
  implementation(libs.spring.boot.starter.test) {
    exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
  }

  // Wiremock
  testImplementation libs.wiremock.test

  // Test Containers
  testImplementation libs.test.containers
  testImplementation libs.test.container.junit
  testImplementation libs.test.containers.git.server
  testImplementation libs.test.containers.opensearch

  // JGit and JSch
  implementation libs.jgit
  implementation libs.jsch
  implementation libs.jgit.ssh

  // Monitoring
  implementation libs.spring.boot.actuator.starter
  implementation libs.micrometer.registry.prometheus
  implementation libs.micrometer.core

  // Tomcat (webserver)
  implementation libs.tomcat.embed.websocket

  // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
  implementation 'org.springframework.boot:spring-boot-starter-web:3.5.4'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

test {
  jvmArgs = ["-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains("byte-buddy-agent") }.absolutePath}",
             "--add-opens=java.base/java.util.zip=ALL-UNNAMED"]
}

application {
  // Define the main class for the application.
  mainClass = 'org.hali.App'
}

tasks.named('test') {
  // Use JUnit Platform for unit tests.
  useJUnitPlatform()
}
